<resources>
    <string name="app_name">KeyKeeper</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for bottom navbar -->
    <string name="nav_debug">Debug</string>
    <string name="nav_storage">Storage</string>
    <string name="nav_account">Account</string>
    <string name="nav_edit_profile">Edit Profile</string>

    <!-- Main strings -->
    <string name="toolbar_button_add_storage_item_description">Add Item</string>

    <!-- Debug strings -->
    <string name="debug_input_prompt">Enter text …</string>
    <string name="debug_button">Confirm</string>

    <!-- Account strings -->
    <string name="account_profile_image_text">Profile</string>
    <string name="account_profile_email">email@provider.com</string>
    <string name="account_logout">Logout</string>
    <string name="account_edit_profile">Edit Profile</string>
    <string name="account_change_email">Change Email</string>
    <string name="account_change_password">Change Password</string>
    <string name="account_delete">Delete Account</string>
    <string name="account_delete_confirm">Confirm Delete</string>

    <!-- Login strings -->
    <string name="login_header">Welcome to KeyKeeper</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_no_account">No account?</string>
    <string name="login_create_account">Create new account</string>
    <string name="login_remember_email">Remember Email</string>
    <string name="login_offline_mode">Offline login</string>
    <string name="login_change_server_button">Change Server</string>
    <string name="login_server_connect">Connect to: %1$s</string>

    <!-- change server strings -->
    <string name="change_server_text_view">Change Server</string>
    <string name="change_server_popup_close_button_description">Close Popup</string>
    <string name="change_server_url">Url</string>
    <string name="change_server_server_name">Server Name</string>
    <string name="change_server_confirm">Confirm</string>
    <string name="change_server_remove_server">Remove Server</string>

    <!-- Create Account strings -->
    <string name="create_account_header">Create Account Debug</string>
    <string name="create_account_email">Account email</string>
    <string name="create_account_password">Master password</string>
    <string name="create_account_button">Create Account</string>

    <!-- Storage strings -->
    <string name="storage_query">Search …</string>
    <string name="storage_query_no_match">No Match</string>

    <!-- Storage Item strings -->
    <string name="storage_item_url">URL</string>
    <string name="storage_item_name">Name</string>

    <!-- Storage Popup strings -->
    <string name="storage_popup_click_prompt">Click field to copy</string>
    <string name="storage_popup_url">Url</string>
    <string name="storage_popup_label">Label</string>
    <string name="storage_popup_username">Username</string>
    <string name="storage_popup_password">Password</string>
    <string name="storage_popup_show_password">Show password</string>
    <string name="storage_popup_notes">Notes</string>
    <string name="storage_popup_apply">Apply</string>
    <string name="storage_popup_add">Add Item</string>
    <string name="storage_popup_edit">Edit</string>
    <string name="storage_popup_delete">Delete</string>
    <string name="storage_popup_confirm_delete">Confirm Delete</string>
    <string name="storage_popup_close_button_description">Close Popup</string>
    <string name="storage_popup_apply_button_description">Apply Changes</string>
    <string name="storage_popup_add_button_description">Add Item</string>
    <string name="storage_popup_add_item_header">Add New Item</string>
    <string name="storage_popup_edit_item_header">Edit Item</string>

    <!-- Edit Profile strings -->
    <string name="edit_profile_edit_profile_text_view">Edit Profile</string>
    <string name="edit_profile_save_changes_button">Save Changes</string>
    <string name="edit_profile_new_password_edit_text">New Password</string>
    <string name="edit_profile_new_password_edit_text_2">Retype Password</string>
    <string name="edit_profile_new_email_edit_text">New Email</string>
    <string name="edit_profile_edit_email_check_box">Edit Email</string>
    <string name="edit_profile_edit_password_checkbox">Edit Password</string>
    <string name="edit_profile_old_password_edit_text">Old Password</string>
    <string name="edit_profile_text_explanation_text_view">Write your old password to confirm</string>


    <!-- Profile strings -->
    <string name="account_edit_profile_button">Edit Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="account_test_test_example_text_view">test@test.example</string>
    <string name="server_item_label">Label</string>
    <string name="server_item_remove_the_server">Remove the server</string>

</resources>