<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/nav_home_fragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@id/nav_account_fragment"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_account" />

    <item
        android:id="@id/nav_storage_fragment"
        android:icon="@drawable/ic_key"
        android:title="@string/nav_storage" />

    <item
        android:id="@id/nav_settings_fragment"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@id/nav_debug_fragment"
        android:icon="@drawable/ic_debug"
        android:title="@string/nav_debug" />
</menu>