<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    android:theme="@style/Theme.KeyKeeper"
    tools:context=".LoginActivity"
    android:id="@+id/Login_activity_layout"
    >

    <TextView
        android:id="@+id/login_header_label"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:gravity="center"
        android:text="@string/login_header"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/login_body_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/login_body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/login_email_input"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/login_remember_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_remember_email" />

        <CheckBox
            android:id="@+id/login_offline_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_offline_mode" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="4dp"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/login_header_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/login_no_account"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/login_create_account"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_status_message"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:minHeight="46dp"
        android:textAlignment="center"
        android:visibility="invisible"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/login_body_layout"
        app:layout_constraintStart_toStartOf="@+id/login_body_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_body_layout" />

    <ImageView
        android:id="@+id/login_loading_icon"
        android:layout_width="46dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_body_layout"
        app:layout_constraintEnd_toEndOf="@+id/login_body_layout"
        app:layout_constraintStart_toStartOf="@+id/login_body_layout"
        app:layout_constraintTop_toTopOf="@+id/login_body_layout"
        app:srcCompat="@drawable/an_loading"
        android:visibility="gone"
        android:contentDescription="@string/login_loading"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_server_connect_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_server_connect" />

        <ImageButton
            android:id="@+id/login_change_server_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/login_change_server_button"
            android:src="@drawable/ic_change" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>