<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/login_header_label"
        android:layout_width="186dp"
        android:layout_height="71dp"
        android:gravity="center"
        android:text="@string/login_header"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/login_email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/login_email_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_email_input"
        app:layout_constraintTop_toBottomOf="@+id/login_email_input" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="@+id/login_password_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_password_input"
        app:layout_constraintTop_toBottomOf="@+id/login_password_input" />


    <TextView
        android:id="@+id/login_header_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/login_no_account"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        android:id="@+id/login_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_create_account"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/login_header_label2"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/login_header_label2"
        app:layout_constraintTop_toBottomOf="@+id/login_header_label2" />

</androidx.constraintlayout.widget.ConstraintLayout>