<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment"
    tools:background="@drawable/bg_image">

    <ImageView
        android:id="@+id/account_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_profile_pic"
        android:contentDescription="@string/account_profile_image_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/account_profile_email"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/account_profile_image"
        app:layout_constraintStart_toStartOf="@+id/account_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/account_profile_image" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_profile_image">

        <Button
            android:id="@+id/account_logout_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="4dp"
            android:text="@string/account_logout" />

        <Button
            android:id="@+id/account_edit_profile_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="4dp"
            android:text="@string/account_edit_profile" />

        <Button
            android:id="@+id/account_delete_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/dangerous"
            android:tag="delete"
            android:text="@string/account_delete" />
    </LinearLayout>

    <TextView
        android:id="@+id/account_status_message"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>